src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --breakpoint-xxs: 400px;
  --breakpoint-xs: 480px;
  --breakpoint-sm: 660px;
  --breakpoint-md: 840px;
  --breakpoint-lg: 1024px;

  --text-md: 1.0625rem;
  --text-h1: 2.125rem;
  --text-h2: 1.75rem;
  --text-h3: 1.375rem;
  --text-15: 0.9375rem;
  --text-26: 1.625rem;

  --border-width-1\.5: 1.5px;

  --radius-3xl: 1.25rem;
  --radius-4xl: 1.5rem;
  --radius-5xl: 1.75rem;
}

/* Text Utilities */

@utility text-primary {
  @apply text-zinc-800 dark:text-zinc-200;
}

@utility text-secondary {
  @apply text-zinc-600 dark:text-zinc-400;
}

/* Background Utilities */

@utility bg-default {
  @apply bg-zinc-100 dark:bg-zinc-900;
}

@utility bg-primary {
  @apply bg-zinc-200/50 dark:bg-zinc-800/50;
}

@utility bg-secondary {
  @apply bg-zinc-200 dark:bg-zinc-800;
}

@utility bg-input {
  @apply bg-zinc-50 dark:bg-zinc-950/40;
}

/* Border Utilities */

@utility border-default {
  @apply border-zinc-300/60 dark:border-zinc-800;
}

@utility border-focus {
  @apply border-zinc-400 dark:border-zinc-600;
}

/* Icon Utilities */

@utility icon-lg {
  @apply xs:w-14 w-12;
}

@utility icon-btn {
  @apply text-secondary hover:text-primary transition-all duration-200;
}

@utility icon-btn-bg {
  @apply icon-btn sm:size-10 size-9 flex items-center justify-center rounded-xl hover:bg-secondary shrink-0;
}

@utility icon-btn-bg-sm {
  @apply icon-btn size-8 flex items-center justify-center rounded-lg hover:bg-secondary shrink-0;
}

/* Scrollbar Utilities */

@utility scrollbar-thin {
  scrollbar-width: thin;
}

@utility scrollbar-hide {
  &::-webkit-scrollbar {
    display: none;
  }
  -ms-overflow-style: none;
  scrollbar-width: none;
  -webkit-overflow-scrolling: touch;
  overscroll-behavior: contain;
  will-change: scroll-position;
}

/* Shimmer Animation */

@utility animate-shimmer {
  @apply relative inline-block overflow-hidden before:content-[''] before:absolute before:top-0 before:left-0 before:size-full before:bg-gradient-to-r before:from-transparent before:via-black/10 dark:before:via-white/10 before:to-transparent before:transform-[translateX(-100%)] before:animate-[shimmer_1s_infinite_linear];
}

@keyframes shimmer {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(100%);
  }
}

/* Base Styles */

@layer base {
  .dark {
    color-scheme: dark;
  }

  html {
    @apply scrollbar-thin;
  }

  ::selection {
    @apply text-teal-950 bg-teal-500;
  }

  body,
  body * {
    @apply box-border border-default scrollbar-thin;
  }

  body {
    @apply text-secondary bg-default w-full relative overflow-x-hidden;
  }

  .root {
    @apply w-full min-h-dvh relative flex flex-col items-center;
  }

  .page-main {
    @apply w-full relative flex flex-col items-center justify-center flex-1 md:px-5 px-4 md:py-4 py-3;
  }

  button,
  a {
    cursor: pointer;
  }

  input:-webkit-autofill,
  input:-webkit-autofill:hover,
  input:-webkit-autofill:focus,
  textarea:-webkit-autofill,
  textarea:-webkit-autofill:hover,
  textarea:-webkit-autofill:focus,
  select:-webkit-autofill,
  select:-webkit-autofill:hover,
  select:-webkit-autofill:focus {
    -webkit-text-fill-color: var(--color-zinc-800);
    -webkit-box-shadow: 0 0 0px 1000px oklch(98.5% 0 0) inset;
    &:where(.dark, .dark *) {
      -webkit-text-fill-color: var(--color-zinc-200);
      -webkit-box-shadow: 0 0 0px 1000px oklch(0.1836 0.0061 285.79) inset;
    }
  }

  .icon-btn svg,
  .icon-btn-bg-sm svg {
    @apply w-5;
  }

  .icon-btn-bg svg {
    @apply w-5.5;
  }
}

/* Components */

@layer components {
  .h1 {
    @apply md:text-h1 sm:text-3xl text-h2 font-semibold leading-snug text-primary;
  }

  .h2 {
    @apply md:text-h2 sm:text-2xl text-h3 font-medium leading-snug text-primary;
  }

  .h3 {
    @apply lg:text-h3 sm:text-xl text-lg font-medium leading-snug text-primary;
  }

  .h4 {
    @apply sm:text-lg text-md font-medium leading-snug text-primary;
  }

  .input {
    @apply w-full flex items-center sm:h-13 h-12 sm:p-4 p-3 outline-none transition-all duration-200 text-primary bg-input border border-default focus:border-focus rounded-2xl placeholder:text-zinc-500;
  }

  .mnemonic-word-input {
    @apply w-full flex items-center xs:gap-1 gap-0.5 sm:p-3 p-2 sm:h-12 h-11 leading-none text-primary bg-input border border-default focus-within:border-focus rounded-xl xs:text-base text-15;
  }

  .box {
    @apply w-full max-w-md relative flex flex-col items-center text-center border-1.5 border-default rounded-3xl;
  }

  .box h1,
  .box h2 {
    @apply xs:text-h2 text-2xl font-medium leading-snug text-primary;
  }

  .box h3 {
    @apply xs:text-2xl text-xl font-medium leading-snug text-primary;
  }

  .box.without-progress {
    @apply xs:gap-6 gap-5 xs:p-12 p-8;
  }

  .hero {
    @apply w-full flex flex-col text-center sm:gap-6 gap-5 items-center bg-primary md:py-16 sm:py-13 py-10 md:px-12 sm:px-9 px-6 rounded-4xl relative overflow-hidden before:content-[''] before:pointer-events-none before:absolute before:top-0 before:right-0 md:before:size-32 sm:before:size-28 before:size-24 before:bg-teal-500/10 before:rounded-bl-full after:content-[''] after:pointer-events-none after:absolute after:bottom-0 after:left-0 md:after:size-48 sm:after:size-42 after:size-36 after:bg-teal-500/5 after:rounded-tr-full;
  }

  .link {
    @apply leading-none text-primary transition-all duration-200 border-b border-transparent hover:border-current;
  }

  .highlight-yellow {
    @apply text-yellow-600 dark:text-yellow-500 bg-yellow-500/20 dark:bg-yellow-500/10 border-yellow-500/20 dark:border-yellow-500/10;
  }

  .highlight-teal {
    @apply text-teal-600 dark:text-teal-500 bg-teal-500/20 dark:bg-teal-500/10 border-teal-500/20 dark:border-teal-500/10;
  }

  .highlight-zinc {
    @apply text-primary bg-primary border-default;
  }

  .highlight-rose {
    @apply text-rose-600 dark:text-rose-500 bg-rose-500/20 dark:bg-rose-500/10 border-rose-500/20 dark:border-rose-500/10;
  }
}

